overflow solved

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1128,7 +1128,7 @@ a.mytooltip { font-weight: 500; color: #009efb }
 .plugin-details { display: none }
 .plugin-details-active { display: block }
 .form-control-line .form-control { -webkit-box-shadow: none; box-shadow: none }
-.left-sidebar { position: fixed; z-index: 1000 !important; width: 250px; height: 100%; top: 70px; z-index: 20; padding-top: 30px; background: #192a56; }
+.left-sidebar { position: fixed; width: 250px; height: 100%; top: 70px; z-index: 20; padding-top: 30px; background: #192a56; }
 .fix-sidebar .left-sidebar { position: fixed !important; }
 .user-profile { position: relative; background-size: cover }
 .user-profile .profile-img { width: 50px; margin-left: 30px; padding: 35px 0; border-radius: 100% }
